@@ -5,6 +5,9 @@ Version 1.2-1, August 26, 2010
       the different seeds approach is not satisfactory
       because it cannot garantee independence of the chains
     * seed arg added to bugs.fit
+    * RNG option added to work with snowWrapper
+    * set.rng arg added to snowWrapper that calls
+      snow::clusterSetupRNG
 
 Version 1.2-0, August 26, 2010
     * polishing plot methods for R Journal paper.
